--- a/css/index.css
+++ b/css/index.css
@@ -50,12 +50,13 @@ img{font-size: 0;}
 .head img{display: block; font-size: 0; width: 100%; height: 100%;}
 .member-info{font-size: 0.54rem;-ms-flex-item-align: stretch;
     -webkit-align-self: stretch;
-    align-self: stretch; color: #fff;}
+    align-self: stretch; color: #fff; margin-left: 1.7vw;}
 .code img{width: 12.8vw; display: block; margin-bottom: 0.2rem;}
+.code p{text-align: center;}
 .member-info p.big{font-size: 0.71rem;}
 .member{margin-left: 0.5rem;}
 .stretch-height{height: 12.8vw; text-align: left; margin-bottom: 0.2rem;}
-.card-number{position: absolute; bottom: 0; left: 0; width: 100%;}
+.card-number{position: absolute; bottom: 0; left: 0; width: 100%; height: 0.9rem; line-height: 0.9rem;}
 .grade{position:absolute; width: 0.8rem; height: 0.8rem; text-align: center; line-height: 0.9rem; font-weight: bolder; font-size: 0.68rem; background-color: #f4d621; border-radius: 50%; color: #fff;border: 0.2rem solid #fff; top: -0.1rem; right: 0;}
 /*==中间导向==*/
 .nav-links>div{
