--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ p{margin: 0;}
 .card{margin: 0.75rem 0.5rem; border-radius: 0.3rem; padding: 0 0.5rem; font-size: 0.6rem; white-space: nowrap;}
 .card-header{font-size: 0.625rem; border-bottom: none;}
 .card-header+.card-header{border-top: 1px dashed #c9c9c9;}
-.app-item-title{color: #fff; text-align: center; width: 3rem; height: 1.1rem; line-height: 1.2rem; border-radius: 0.25rem; margin-right: 0.2rem;}
+.app-item-title{color: #fff; text-align: center; width: 3rem; height: 1.1rem; line-height: 1.1rem; border-radius: 0.25rem; margin-right: 0.2rem;}
 /*.app-item-content{}*/
 .app-item-content{color: #1a1a1f; flex: auto; width: 0; overflow: hidden;}
 .card-header>div{display: -webkit-box; display: -ms-flexbox; display: -webkit-flex; display: flex;-webkit-box-align: center; -ms-flex-align: center; -webkit-align-items: center; align-items: center; -webkit-box-pack: start; -ms-flex-pack: start; -webkit-justify-content: flex-start; justify-content: flex-start; }
@@ -71,6 +71,7 @@ p{margin: 0;}
 .buttons-tab a.button{width: 23%; height: 2.5rem; line-height: 2.5rem; color: #fff; font-size: 0.625rem; border-radius: 0.4rem;}
 .treatment .app-item-content{color: #010101; font-size: 0.75rem; width: auto; font-weight: bold;}
 .redCard .treat-links{background-color: #e73358;}
+.redCard .treat-links:active{color: #fff;}
 .treat-links{color: #fff; font-size: 0.6rem; height: 1.1rem; line-height: 1.1rem; text-align: center; width: 3.5rem; border-radius: 0.35rem;}
 .treat-links~.treat-links{margin-left: 0.3rem;}
 .treat-times{margin-left: 0.35rem; color: #1a1a1f; font-weight: bold;}
@@ -98,6 +99,7 @@ p{margin: 0;}
 .setting .card-footer{border-top: none;}
 .setting .card-footer{padding: 0.75rem 0; margin-top: 1.5rem;}
 .setting-btn{width: 100%; height: 1.75rem; line-height: 1.75rem; background-color: #ff6900; color: #fff; font-size: 0.75rem; border: none;}
+.setting-btn:active{color: #fff; background-color: #f16300}
 .lockIcon{-webkit-background-size: 106% auto; background-size: 180% auto; background-position: center 50.4%; width: 1rem; height: 1rem;}
 .setting-card2 li+li{margin-top: 0.75rem;}
 .setting-card2 .card-footer{padding: 0.75rem 0; margin-top: 0.25rem;}
@@ -111,7 +113,7 @@ p{margin: 0;}
 .coupon-code{font-size: 0.825rem; font-weight: bolder;}
 .coupon-notice{font-size: 0.5rem; position: absolute; left: 0; bottom: 0.2rem;}
 .coupon-notice span+span{margin-left: 0.3rem;}
-.coupon-money{width: 30vw; height: 100%; position: relative;}
+.coupon-money{width: 32vw; height: 100%; position: relative;}
 .coupon-money img{display: block; width: 100%; max-height: 100%; text-align: center; }
 .coupon-money-bg{ position: absolute; width: 100%; height: 100%; left: 0; top: 0; z-index: 30;}
 .redCard .coupon-money-bg,.redCard .circle{background-color: #e73358;}
