--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,4 @@
 @charset "utf-8";
-/*
-//纵向
-    -ms-flex-item-align: center;
-    -webkit-align-self: center;
-    align-self: center;
-
-     //横向
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    -webkit-justify-content: space-between;
-    justify-content: space-between;
-
-
-//纵
--ms-flex-item-align: stretch;
-    -webkit-align-self: stretch;
-    align-self: stretch;
-
-     -webkit-flex-wrap: nowrap;
-    -ms-flex-wrap: none;
-    -ms-flex-wrap: nowrap;
-    flex-wrap: nowrap;
-    *
-
-*/
 .flex{display: -webkit-box; display: -ms-flexbox; display: -webkit-flex; display: flex;}
 .ver-center{ -webkit-box-align: center; -ms-flex-align: center; -webkit-align-items: center; align-items: center; }
 .ver-stretch{-webkit-box-align: stretch; -ms-flex-align: stretch; -webkit-align-items: stretch; align-items: stretch; }
@@ -38,7 +13,7 @@
 .appointmentIcon{-webkit-background-size: 106% auto; background-size: 106% auto;background-position: -1px -0.5%;}
 /*==content==*/
 p{margin: 0;}
-.bar-nav~.content{top: 3rem; background-color: #e8e8e8;}
+.bar-nav~.content{top: 3rem; background-color: #e8e8e8}
 .bgred{ background-color: #e73358;}
 .bgblue{ background-color: #13b5b1;}
 .bggreen{ background-color: #9ab445;}
@@ -90,9 +65,7 @@ p{margin: 0;}
 .inputs-control input{width: 100%; height: 100%; padding: 0 0.5rem;}
 ::-webkit-input-placeholder{color: #1a1a1f; }
 ::-ms-input-placeholder{color: #1a1a1f; }
-.selects label{background: url("../img/triangle.png") no-repeat 90% center;
-    -webkit-background-size: auto 40%;
-    background-size: auto 40%;}
+.selects label{background: url("../img/triangle.png") no-repeat 90% center; -webkit-background-size: auto 40%; background-size: auto 40%;}
 .inputs-control label+label{margin-left: 0.7rem;}
 .card-content li+li{margin-top: 1.25rem;}
 .setting .card-content{margin-top: 0.2rem;}
@@ -167,12 +140,3 @@ p{margin: 0;}
 .bar-tab .tab-item{height: 1.75rem; line-height: 1.75rem; text-align: center; border-radius: 0.4rem; border: 1px solid #ff6900; width: 49%; font-size: 0.75rem; font-weight: bold;}
 .bar-tab .tab-item.shopping-car{color: #ff6900; background-color: #fff;}
 .bar-tab .tab-item.buy{color: #fff; background-color: #ff6900;}
-
-
-
-
-
-
-
-
-
