--- a/SIGNUP/css/reset.css
+++ b/SIGNUP/css/reset.css
@@ -16,7 +16,7 @@ table {  border-collapse: collapse; }
 html {overflow-y: scroll;}
 a, button, input, select, textarea { -webkit-tap-highlight-color: rgba(255, 255, 255, 0); border-radius: 0; }
 input{border: 0.1px solid transparent;}
-input::-webkit-inner-spin-button, input::-webkit-outer-spin-button { -webkit-appearance: none !important;  margin: 0  ;}
+input::-webkit-inner-spin-button, input::-webkit-outer-spin-button ,select{ -webkit-appearance: none !important;  margin: 0  ;}
 button, input[type=submit], input[type=reset], input[type=button], input[type=file] { -webkit-appearance: none;}
 input[type=number] { -moz-appearance: textfield;  }
 .clearfix:after, .clearfix:before {  content: "";  display: block;  height: 0;  clear: both;  visibility: hidden;}
