--- a/SIGNUP/css/coupons.css
+++ b/SIGNUP/css/coupons.css
@@ -19,7 +19,7 @@
 .tabs a:nth-child(2){border-left: 1px solid #d3d3d3;}
 .swiper-slide{padding: 1.25rem 0.75rem;}
 .select-wrapper{width: 100%; border: 1px solid #9f9f9f; border-radius: 0.25rem; background-color: #fafafa; height: 2.1rem; line-height: 2rem;}
-.select-wrapper input,.select-wrapper select{display: block; height: 100%; outline: none; border: none; width: 100%; padding-left: 1rem; color: #9f9f9f; font-size: 1rem; letter-spacing: 0.05rem; background: url("../img/downArrow.png") no-repeat center right; -webkit-background-size: auto 35%; background-size: auto 35%;}
+.select-wrapper input,.select-wrapper select{display: block; height: 100%; outline: none; border: none; width: 100%; padding-left: 1rem; color: #9f9f9f; font-size: 1rem; letter-spacing: 0.05rem; background: url("../img/downArrow.png") no-repeat center right; -webkit-background-size: auto 35%; background-size: auto 35%; border-radius: 0.25rem; }
 .card{background-color: #fff; border-radius: 0.5rem; padding-top: 1.6rem; margin-top: 1rem; box-shadow: 5px 7px 8px #dbdbdb, -5px 7px 8px #dbdbdb; overflow: hidden;}
 .card-name{color: #e99b04; font-size: 1.25rem;margin-left: 1.25rem; font-weight: bold;}
 .card-title{color: #595757; font-size: 0.875rem;margin-left: 1.25rem; line-height: 1.5rem; font-weight: bold; margin-bottom: 1rem;}
